# BrilliantChip8

./: .clang.tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/brilliant_chip8/: BrilliantChip8.hpp  OpCodeExecutor.hpp  Renderer.hpp  utils.hpp
src/: BrilliantChip8.cpp  OpCodeExecutor.cpp  OpCodes.cpp  Renderer.cpp  greeter.cpp  main.cpp  utils.cpp  utils.h  utils_posix.cpp  utils_win.cpp
tests/: BrilliantChip8Tests.cpp
